--- a/package.json
+++ b/package.json
@@ -13,21 +13,29 @@
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.0",
     "expo": "~40.0.0",
+    "expo-camera": "~9.1.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-image-picker": "^3.1.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-image-picker": "~9.2.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-native-datepicker": "^1.7.0",
+    "@types/react-native-text-input-mask": "^0.7.5",
+    "react-native-text-input-mask": "^2.0.0",
     "typescript": "~4.0.0"
   },
   "private": true
